Kubernetes/echo/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echo-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`echo.mwinkler.ga`) || Host(`echo.localhost`)
    kind: Rule
    services:
    - name: echo
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echo-ingress-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`echo.mwinkler.ga`) || Host(`echo.localhost`)
    kind: Rule
    services:
    - name: echo
      port: 80
  tls:
    certResolver: myresolver
